passe la couleur primaire en rouge FP

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --couleur-primaire: #2a6442;
+  --couleur-primaire: #e4032f;
 
   --underline-max-width: 100%;
   --underline-hover-width: 0;
