--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -290,12 +290,13 @@ iframe {
 }
 
 section {
-  margin: 1em auto;
+  margin: 6em auto;
 }
 
 .logos_partis ul {
   display: flex;
   list-style: none;
+  background: var(--couleur-primaire);
 }
 
 .logos_partis li {
